testing path issues